Made static blocks in modules